src/test/resources/purescript_examples/failing/DeclConflictCtorClass.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith DeclConflict\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Fail')
              PsiElement(whitespace)('\n\n')
        PSImpliesImpl(Implies)
          <empty list>
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('T')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Fail')
            PsiElement(whitespace)('\n')
